--- a/resources.qrc
+++ b/resources.qrc
@@ -14,5 +14,6 @@
         <file>qml/AppSettings.qml</file>
         <file>qml/PLoader.qml</file>
         <file>qml/SettingsDialog.qml</file>
+        <file>qml/AuthDialog.qml</file>
     </qresource>
 </RCC>
