--- a/widgets/noteswidget.ui
+++ b/widgets/noteswidget.ui
@@ -43,6 +43,12 @@
          <property name="editTriggers">
           <set>QAbstractItemView::EditTrigger::NoEditTriggers</set>
          </property>
+         <property name="iconSize">
+          <size>
+           <width>32</width>
+           <height>32</height>
+          </size>
+         </property>
          <property name="viewMode">
           <enum>QListView::ViewMode::ListMode</enum>
          </property>
